<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">"即乐"</string>

    <!--Drawer-->
    <string name="nav_track">"我的足迹"</string>
    <string name="nav_recommend">"发现"</string>
    <string name="nav_user_info">"用户信息"</string>
    <string name="nav_coupon">"领取优惠券"</string>
    <string name="more">"更多"</string>
    <string name="nav_setting">设置</string>
    <string name="nav_share">"分享"</string>
    <string name="nav_send">"反馈"</string>
    <string name="nav_help">"帮助"</string>

    <string name="hint">"点播前请确认门店在线（播放歌曲为播放列表显示歌曲）；点播即代表您已确认并接受门店播放环境，包括音量、音质、噪音等；\n点播歌曲在当前歌曲播放完后播放；若播放列表顶端已有“点播歌曲”，则所有点播歌曲播放完才播放本次点播歌曲；任何情况造成的点播歌曲未正常播放均会退款；若有包括搜不到指定歌手或歌曲在内的任何问题，请点击左上角“三”形状符号“反馈”处反馈，我们将第一时间处理您的问题。"</string>

    <!--Login-->
    <string name="login_successful_message">"微信登录成功"</string>
    <string name="login_error_message">"微信登录失败,请重试"</string>
    <string name="login_label">"登录"</string>
    <string name="login_title">"使用手机号码登录"</string>
    <string name="forget_password">"忘记密码?"</string>
    <string name="skip">"跳过"</string>
    <string name="hint_user_name">"请输入手机号码"</string>
    <string name="hint_password">"请输入密码"</string>
    <string name="submit">"登录"</string>
    <string name="action_sign_in_short">"登录"</string>
    <string name="wx_login">"微信登录"</string>

    <string name="navigation_drawer_open">"打开导航栏"</string>
    <string name="navigation_drawer_close">"关闭导航栏"</string>
    <string name="action_search">"搜索"</string>
    <string name="action_settings">"设置"</string>
    <string name="action_share">"分享"</string>

    <!--Loading-->
    <string name="loading_error_message">"加载出错了，请稍后再试"</string>
    <string name="loading_successful_message">"加载完成"</string>

    <!--Mine-->
    <string name="my_favorite">"我的收藏:"</string>
    <string name="my_dynamic">"我的动态:"</string>
    <string name="default_favorite">"我喜欢"</string>
    <string name="add_playlist">"新建歌单"</string>
    <string name="new_playlist_title">"请输入歌单名称..."</string>

    <!--Search-->
    <string name="action_playlist">"添加到播放列表"</string>
    <string name="action_favorite">"加入收藏"</string>
    <string name="action_comment">"查看评论"</string>
    <string name="search_no_result">"没有相关音乐,请换个关键词试试。"</string>
    <string name="no_more_message">"没有更多。"</string>

    <!--TabLayout-->
    <string-array name="main_page_title">
        <item>"我的"</item>
        <item>"播放列表"</item>
        <item>"发现"</item>
    </string-array>

    <!--Comment-->
    <string name="comment_label">"评论"</string>
    <string name="no_comment">"还没有评论。"</string>
    <string name="store_comment_description">"店内评论："</string>
    <string name="all_comment_description">"所有评论："</string>

    <!--Audition-->
    <string name="audition_title">"试听30秒"</string>

    <!--MyFavorites-->
    <string name="add_to_favorites">"收藏到歌单"</string>
    <plurals name="song_count">
        <item quantity="other">%d 首</item>
    </plurals>
    <string name="add_to_favorites_completed">"成功添加到该歌单。"</string>
    <string name="add_to_favorites_failed">"添加到该歌单失败。"</string>
    <string name="action_modify_favorites">"修改歌单名称"</string>
    <string name="action_delete">"删除"</string>
    <string name="modify_name">"重命名"</string>

    <!--Setting-->
    <string name="cancel_login">"取消登录"</string>
    <string name="notification">"通知"</string>
    <string name="key_notification" translatable="false">key notification</string>
    <string name="notification_title">"接收消息推送"</string>
    <string name="notification_sumary">"功能还在开发中"</string>
    <string name="theme">"主题"</string>
    <string name="off">"关闭"</string>
    <string name="on">"开启"</string>
    <string name="comment_tail_summary">"开启后可以自定义"</string>
    <string name="comment_tail_title">"评论小尾巴"</string>
    <string name="modify_comment_tail_title">"设置评论小尾巴"</string>
    <string name="key_comment_tail" translatable="false">key_comment_tail</string>
    <string name="key_edit_comment_tail" translatable="false">key_edit_comment_tail</string>
    <string name="key_dark_theme" translatable="false">key_dark_theme</string>
    <string name="dark_theme_title">"夜间模式"</string>
    <string name="comment">"评论"</string>

    <!--Playlist-->
    <string name="now_playing">"当前门店正在播放："</string>

    <!--Payment-->
    <string name="free_description">"-1.0元"</string>
    <string name="no_coupon">"无可用优惠券"</string>
    <string name="confirm_free">"确认支付0.0元"</string>
    <string name="confirm_pay">确认支付1.0元</string>
    <string name="coupon_count">（1张，共<xliff:g id="number">%d</xliff:g>张）</string>

    <!--About-->
    <string name="about_label">"关于我们"</string>
    <string name="action_about">"关于"</string>

    <!--Splash-->
    <string name="store_title">"店铺选择"</string>
    <string name="confirm_description">"确定"</string>
    <string name="splash_description" translatable="false">"CopyRight"</string>
    <string name="company_name" translatable="false">"成都心尚信息技术有限公司"</string>
    <string name="company_description" translatable="false">"    即乐由成都心尚信息技术有限公司于2018年创建。心尚公司获取正规授权歌曲，与各类线下商家紧密合作，为用户提供店铺内即时音乐点播服务。\n    心尚公司以“心之所向，行之所尚”作为公司和每位员工的行为准则，以“创造更美好的生活”为目标，致力于为用户提供更多元化的线下消费体验。"</string>
    <!--Transition name-->
    <string name="transition_album" translatable="false">transition_album</string>

    <!--Feedback-->
    <string name="feedback_title_hint">"标题"</string>
    <string name="feedback_content_hint">"内容"</string>
    <string name="feedback_title">"反馈"</string>
    <string name="error_title_message">"标题应不少于5个字符"</string>
    <string name="error_content_message">"内容应不少于5个字符"</string>
    <string name="feedback_successful_message">"反馈成功"</string>
    <string name="feedback_failed_message">"反馈失败，请稍后再试。"</string>

    <string name="update_message">"即乐新版本已发布，请在前台重新扫描二维码下载使用。"</string>

    <!--Coupon-->
    <string name="share_my_code_successfull_message">"领取成功，您已获得5张免费券。"</string>
    <string name="share_my_code_failed_message">"领取失败，请稍后再试。"</string>
</resources>
