<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_playlist"
            android:title="@string/nav_playlist" />
        <item
            android:id="@+id/nav_recommend"
            android:icon="@drawable/ic_library"
            android:title="@string/nav_recommend" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_user"
            android:title="@string/nav_user" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_send" />
        </menu>
    </item>

</menu>
